--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -5,19 +5,21 @@ on:
     branches:
       - main
   workflow_dispatch:
-    
-  permissions:
-    contents: write
-    pull-requests: write
+
+defaults:
+  run:
+    shell: bash
+
+permissions:
+  contents: write
+  pull-requests: write
   
-    
-  jobs:
-    release-please:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: google-github-actions/release-please-action@v4
-          id: release
-          with:
-            token: ${{ secrets.GITHUB_TOKEN }}
-            target-branch: ${{ github.ref_name }}
-            release-type: simple
+jobs:
+  release-please:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: google-github-actions/release-please-action@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # target-branch: ${{ github.ref_name }}
+          release-type: simple
