feat: new feat2 (#7)
Signed-off-by: Nikita Korolev <nikita.korolev@flant.com>

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           echo "steps.release.outputs.major - ${{ steps.release.outputs.major }}"
           echo "steps.release.outputs.minor - ${{ steps.release.outputs.minor }}"
-          echo "steps.release.outputs.minor - ${{ steps.release.outputs.release_created }}" || true
+          echo "steps.release.outputs.minor - ${{ steps.release.outputs.patch }}"
       - name: tag major and minor versions
         if: ${{ steps.release.outputs.release_created }}
         run: |
