--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v4
+        id: release
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           # target-branch: ${{ github.ref_name }}
@@ -26,10 +27,11 @@ jobs:
     #-----#
       - uses: actions/checkout@v4
       - name: print vars
+        if: ${{ steps.release.outputs.release_created }}
         run: |
           echo "steps.release.outputs.major - ${{ steps.release.outputs.major }}"
           echo "steps.release.outputs.minor - ${{ steps.release.outputs.minor }}"
-          echo "steps.release.outputs.minor - ${{ steps.release.outputs.patch }}"
+          echo "steps.release.outputs.minor - ${{ steps.release.outputs.patch }}" 
       - name: tag major and minor versions
         if: ${{ steps.release.outputs.release_created }}
         run: |
