add branches to check in pr
Signed-off-by: Nikita Korolev <nikita.korolev@flant.com>

--- a/.github/workflows/check-pr-closure.yaml
+++ b/.github/workflows/check-pr-closure.yaml
@@ -2,7 +2,9 @@ name: Pull Request Checks
 
 on:
   pull_request:
-    types: [closed]
+    branches:
+      - main
+      - release-please--branches--main
 
 jobs:
   check_pr_closure:
